Fix image upload size text wrapping to new line

--- a/frontend/src/style/app/album/_album-upload.scss
+++ b/frontend/src/style/app/album/_album-upload.scss
@@ -279,6 +279,7 @@
 
           .file-size {
             font-size: 1.2rem;
+            white-space: nowrap;
             color: rgb(var(--color-text-light));
           }
 
